fix(course-detail): modify gap on mobile

--- a/src/components/EditCourseForm/EditCourseForm.css
+++ b/src/components/EditCourseForm/EditCourseForm.css
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 768px) {
     .edit-course-buttons {
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 16px;
     }
 
