--- a/src/components/Input/InputCheckboxes/InputCheckboxes.css
+++ b/src/components/Input/InputCheckboxes/InputCheckboxes.css
@@ -1,4 +1,4 @@
-.input-checkboxes {
+.input-checkboxes, .input-checkboxes div {
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -63,5 +63,5 @@
 .two-columns {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 1rem;
+    gap: 12px;
 }
